--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -8,7 +8,15 @@
     margin-bottom: -3.5px;
 }
 
-.copy-button {
+.SingleColorPalette .ColorBox {
+    height: 50%;
+}
+
+.ColorBox.go-back {
+    background-color: black;
+}
+.copy-button,
+.back-button {
     width: 100px;
     height: 30px;
     position: absolute;
@@ -25,8 +33,10 @@
     color: white;
     text-transform: uppercase;
     border: none;
-    opacity: 0;
+    text-decoration: none;
 }
+
+.copy-button { opacity: 0; }
 
 .ColorBox:hover .copy-button {
     opacity: 1;
@@ -44,7 +54,14 @@
     text-transform: uppercase;
     font-size: 12px;
 }
+
+.light-text {
+    color: white;
+}
  
+.ColorBox .dark-text {
+    color: black;
+}
 .see-more {
     background: rgba(255, 255, 255, 0.3);
     position: absolute;
