--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -6,11 +6,11 @@
     position: relative;
     cursor: pointer;
     margin-bottom: -3.5px;
-}
+} */
 
-.SingleColorPalette .ColorBox {
+/* .SingleColorPalette .ColorBox {
     height: 50%;
-}
+} */
 
 .ColorBox.go-back {
     background-color: black;
@@ -35,15 +35,15 @@
     border: none;
     text-decoration: none;
 }
-
-.copy-button { opacity: 0; }
+/* 
+.copy-button { opacity: 0; } */
 
 .ColorBox:hover .copy-button {
     opacity: 1;
     transition: 0.5s;
 }
 
-.box-content {
+/* .box-content {
     position: absolute;
     width: 100%;
     left: 0;
@@ -53,16 +53,16 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
-}
-
+} */
+/* 
 .light-text {
     color: white;
 }
  
 .ColorBox .dark-text {
     color: black;
-}
-.see-more {
+} */
+/* .see-more {
     background: rgba(255, 255, 255, 0.3);
     position: absolute;
     border: none;
@@ -74,24 +74,24 @@
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
-}
+} */
 
-.copy-overlay {
+/* .copy-overlay {
     opacity: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
     transition: transform 0.6s ease-in-out;
-}
+} */
 
-.copy-overlay.show {
+/* .copy-overlay.show {
     opacity: 1;
     transform: scale(50);
     z-index: 10;
     position: absolute;
-}
+} */
 
-.copy-msg {
+/* .copy-msg {
     position: fixed;
     left: 0;
     right: 0;
@@ -105,18 +105,16 @@
     transform:  scale(0.1);
     opacity: 0;
     color: white;
-}
+} */
 
-.copy-msg p {
-
+/* .copy-msg p {
     font-size: 2rem;
-
-}
-
+} */
+/* 
 .copy-msg.show {
     opacity: 1;
     transform: scale(1);
     z-index: 25;
     transition: all 0.4s ease-in-out;
     transition-delay: 0.3s;
-}
+} */
